--- a/Proxy/package.json
+++ b/Proxy/package.json
@@ -14,6 +14,7 @@
     "cors": "^2.8.5",
     "express": "^4.16.4",
     "morgan": "^1.9.1",
+    "newrelic": "^5.7.0",
     "nodemon": "^1.18.11"
   }
 }
